피드백 반영 Service 코드 수정